--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -14,7 +14,7 @@ jobs:
           fi
       - name: Check Issue body
         run: |
-          re='## Summary\n*(.*)\n*## Environment\n*(.*)\n*## Steps to reproduce\n*(.*)\n*## Expected result\n*(.*)\n*## Actual result\n*(.*)'
+          re='## Summary\n*([\w|\W]*)\n*## Environment\n*([\w|\W]*)\n*## Steps to reproduce\n*([\w|\W]*)\n*## Expected result\n*([\w|\W]*)\n*## Actual result\n*([\w|\W]*)'
           if [[ "${{ github.event.issue.body }}" =~ $re ]]; then
               echo "ISSUE_BODY_VALID=true" >> $GITHUB_ENV
           else
